@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2007/08/22 01:19:29 smb Exp $
+
+SHA1 (Inconsolata.otf) = 5b5841e1c46c9c4476af00c4a5ec41f3766b5df1
+RMD160 (Inconsolata.otf) = 25b2c225547aed8c431aa1ebf3d44b530c249a13
+Size (Inconsolata.otf) = 58560 bytes
